# nri-universal-discovery

./: .gitignore  Cargo.toml  Makefile  README.md  THIRD_PARTY_NOTICES.md  def.json
docs/: 1-discovery-many-integrations.md  README.md  aws-ec2-agentless.md  configuration.md  decorator-file.md  flex-update.md  metadata.md  multiple-discoveries.md  optimize.md  ssh-agentless-ebpf.md  ssh-agentless.md  testing-discoveries.md  troubleshooting.md  vsphere-agentless.md  win-remote-exec-typeperf.md  win-remote-exec-winexe.md  win-remote-exec-wmi.md
docs/examples/: README.md  aws-ec2-agentless.md  decorator-file.md  discovery-file.md  ssh-agentless.md  vsphere-agentless.md
docs/faq/: multiple-discoveries.md  secure-credentials.md
examples/: agentless.yml  decoration_file.json  discovery_file.json  discovery_file_ssh_example.json  ebpf-tcplife.yml  netstat.yml  remote-netstat.yml  typeperf-windows.yml  vsphere-agentless.yml  windows-disk-info.yml  windows-netstat.yml  windows-services.yml  windows-wmic-metrics.yml  windows-wmiobj-metrics.yml
scripts/: install_linux-x86_64.sh
src/: decorator.rs  discovery.rs  handler-abc.rsa  handler.rs  main.rs  nrsync.rs  processor.rs  request.rs  utils.rs
